hphp/hack/test/typecheck/array_map3.php.like_types.exp
File "array_map3.php", line 6, characters 3-31:
Invalid argument (Typing[4110])
File "array_map3.php", line 3, characters 26-28:
Expected ~int because it is an unenforceable type
File "array_map3.php", line 6, characters 27-30:
But got bool
